Agregué funcionalidad al bot y persona

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <div class="space-game">X</div>
       <div class="space-game">O</div>
     </div>
-    <button class="button-start" id="startGame">Start Game</button>
+    <h2 class="win" id="winner">You Won</h2>
+    <button class="button-start" id="restartGame">Restart Game</button>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
